🔧 Update exemple.env file

--- a/src/exemple.env
+++ b/src/exemple.env
@@ -6,8 +6,6 @@ GUILD_ID=
 # Welcome, PlayTest and TempVoice Configuration
 WELCOME_CHANNEL_ID=
 WELCOME_ROLE_ID=
-PLAY_TEST_CHANNEL_ID=
-PLAY_TEST_ROLE_ID=
 HUB_VOICE_CHANNEL_ID=
 TEMP_VOICE_CATEGORY_ID=
 
@@ -17,3 +15,8 @@ DB_PORT=
 DB_USER=
 DB_PASSWORD=
 DB_NAME=
+
+#Minecraft Server Configuration
+SERVER_IP=
+SERVER_PORT=
+CONNECTED_VOICE_CHANNEL_ID=
