--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^3.12.0",
     "node-fetch": "^3.2.10",
     "ow": "^0.27.0",
+    "puppeteer": "^24.4.0",
     "tr46": "^0.0.3",
     "ts-mixer": "^6.0.0",
     "tslib": "^2.3.1",
