--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "purpur-discord-bot",
   "version": "0.0.6",
   "description": "The Purpur Discord Bot",
-  "main": "src/index.js",
+  "main": "src/index_old.js",
   "dependencies": {
     "asynckit": "^0.4.0",
     "callsites": "^3.1.0",
@@ -14,11 +14,13 @@
     "dotenv": "^16.4.7",
     "is-obj": "^2.0.0",
     "lodash.isequal": "^4.5.0",
+    "mariadb": "^3.4.0",
     "mime-db": "^1.50.0",
     "mime-types": "^2.1.33",
     "minecraft-server-util": "^5.4.4",
     "mysql2": "^3.12.0",
     "node-fetch": "^3.2.10",
+    "node-mcstatus": "^1.2.1",
     "ow": "^0.27.0",
     "puppeteer": "^24.4.0",
     "tr46": "^0.0.3",
