🚑️ Change SERVER_PORT/IP by MC_SERVER_PORT/IP due to issues using docker and pterodactyl panel (overwriting env values)

--- a/src/exemple.env
+++ b/src/exemple.env
@@ -17,6 +17,6 @@ DB_PASSWORD=
 DB_NAME=
 
 #Minecraft Server Configuration
-SERVER_IP=
-SERVER_PORT=
+MC_SERVER_IP=
+MC_SERVER_PORT=
 CONNECTED_VOICE_CHANNEL_ID=
